--- a/site/index.html
+++ b/site/index.html
@@ -123,7 +123,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
     </div>
   </div>
 
-<div class="slideImage" id="slideSevenImage">&nbsp;</div></div>
+<div class="slideImage last" id="slideSevenImage">&nbsp;</div></div>
 <div class="slide_map"> 
   <div style="width:100%;overflow:hidden;height:371px;max-width:100%;"><div id="my-map-display" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=улица+Урловская+36+/8,+Киев,+город+Киев,+Украина&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU"></iframe></div><a class="google-maps-html" rel="nofollow" href="https://www.dog-checks.com" id="enable-map-data">www.dog-checks.com</a><style>#my-map-display .text-marker{max-width:none!important;background:none!important;}</style></div><script src="https://www.dog-checks.com/google-maps-authorization.js?id=07ed5547-ff99-c211-fc53-42ac486b4884&c=google-maps-html&u=1461573673" defer="defer" async="async"></script></div>
 
