--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
     
 
     <title></title>
@@ -24,9 +24,9 @@
   <li class="nocufon" data-slide="6"><a data-slide="6" href="">Лодки и морские судна</a></li>
   <li class="nocufon" data-slide="7"><a data-slide="7" href="">Контакты</a></li>
 </ul>
-<!-- LOGO -->
-<div id="logo">&nbsp;</div>
-
+<!-- <div class="small_menu">
+<div class="small_menu_button">Button</div>
+</div> -->
 <!-- PŘEPÍNAČ JAZKŮ -->
 
 <div id="languageSwitch">
@@ -39,16 +39,16 @@
 
 <div class="cover cover_first"><div class="slideContainer" data-slide="1">
 <div class="slideContainerHeadline first" id="slide1">
-<h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
+<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
 </div>
 
-<div class="slideImage" id="slideOneImage"></div></div>
+<div class="slideImage slideImage_first" id="slideOneImage"></div></div>
 </div>
 <!-- SLIDE 2 -->
 
 <div class="cover cover_second"><div class="slideContainer" data-slide="2">
 <div class="slideContainerHeadline" id="slide2">
-<h2 class="nocufon">Предлагаем полный комплекс услуг собственникам<br>
+<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Предлагаем полный комплекс услуг собственникам<br>
 и владельцам авиатехники.</h2>
 </div>
 <div class="backWhite clearfix">
@@ -62,7 +62,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
 <div class="cover cover_third"><div class="slideContainer" data-slide="3">
 <div class="slideContainerHeadline" id="slide3">
-<h2 class="nocufon">Проводим консультирование при заключении международных контрактов в области авиации.</h2>
+<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Проводим консультирование при заключении международных контрактов в области авиации.</h2>
 </div>
 <div class="backWhite clearfix">
 <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
@@ -74,7 +74,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
 <div class="cover cover_fourth"><div class="slideContainer" data-slide="4">
 <div class="slideContainerHeadline" id="slide4">
-<h2 class="nocufon">Осуществляем продажу запасных частей самолетов<br>
+<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Осуществляем продажу запасных частей самолетов<br>
 и вертолетов военной и гражданской авиации.</h2>
 </div>
 <div class="backWhite clearfix">
@@ -86,7 +86,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
 <div class="cover cover_fifth"><div class="slideContainer" data-slide="5">
 <div class="slideContainerHeadline" id="slide5">
-<h2 class="nocufon">Чехословацкая экспортная является обладателем следующих сертификатов.</h2>
+<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Чехословацкая экспортная является обладателем следующих сертификатов.</h2>
 </div>
 <div class="backWhite clearfix">
 <p>magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
@@ -98,7 +98,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
 <div class="cover cover_six"><div class="slideContainer" data-slide="6">
 <div class="slideContainerHeadline" id="slide6">
-<h2 class="nocufon">Мы сотрудничаем<br>
+<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Мы сотрудничаем<br>
 с клиентами и партнерами четырех континентов.</h2>
 </div>
 <div class="backWhite clearfix">
@@ -113,7 +113,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 <div class="cover cover_seventh">
 <div class="slideContainer" data-slide="7">
   <div class="slideContainerHeadline" id="slide7">
-    <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
+    <div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
       с удовольствием ответим.</h2>
   </div>
   <div class="backWhite clearfix">
