--- a/site/index.html
+++ b/site/index.html
@@ -131,7 +131,7 @@ magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
 
  <div class="slideContainer">
   <div class="slideContainerHeadline"s>
-    <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
+    <div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
       с удовольствием ответим.</h2>
   </div>
   <div class="backWhite clearfix">
