--- a/site/index.html
+++ b/site/index.html
@@ -15,7 +15,7 @@
   <body class="ru ru_index">
     
 <!-- NAVIGACE -->
-<ul class="navigationMenu">
+<ul class="navigationMenu navigationMenu_main">
   <li class="nocufon active" data-slide="1"><a data-slide="1" href="">О компании</a></li>
   <li class="nocufon" data-slide="2"><a data-slide="2" href="">Консалтинг</a></li>
   <li class="nocufon" data-slide="3"><a data-slide="3" href="">Логистика</a></li>
@@ -28,7 +28,19 @@
 <div class="small_menu_button">Button</div>
 </div> -->
 <!-- PŘEPÍNAČ JAZKŮ -->
-
+<button class="hamburger">&#9776;</button>
+  <button class="cross">&#735;</button>
+  <div class="menu">
+  <ul class="navigationMenu navigationMenu_hamburger" >
+    <li class="nocufon active" data-slide="1"><a data-slide="1" href="">О компании</a></li>
+  <li class="nocufon" data-slide="2"><a data-slide="2" href="">Консалтинг</a></li>
+  <li class="nocufon" data-slide="3"><a data-slide="3" href="">Логистика</a></li>
+  <li class="nocufon" data-slide="4"><a data-slide="4" href="">Услуги в области авиации</a></li>
+  <li class="nocufon" data-slide="5"><a data-slide="5" href="">Услуги в области бронетехники</a></li>
+  <li class="nocufon" data-slide="6"><a data-slide="6" href="">Лодки и морские судна</a></li>
+  <li class="nocufon" data-slide="7"><a data-slide="7" href="">Контакты</a></li>
+  </ul>
+</div> 
 <div id="languageSwitch">
   <a class="lang_en" href="http://www.csea.cz/"><img src="img/language_eng_22x22_Anatysis.png"></a>
   <a class="lang_ru active" href="http://www.csea.cz/ru"><img src="img/language_rus_22x22_Anatysis.png"></a>
