--- a/site/index.html
+++ b/site/index.html
@@ -51,7 +51,7 @@
 
 <div class="cover cover_first"><div class="slideContainer" data-slide="1">
 <div class="slideContainerHeadline first" id="slide1">
-<div id="logo"><img src="img/logo_335x76_Anatysis.png"></div><h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
+<h2 class="nocufon">Компания Československá exportní осуществляет посредническую деятельность в области продажи самолетов и авиатехники с 1995 года.</h2>
 </div>
 
 <div class="slideImage slideImage_first" id="slideOneImage"></div></div>
