--- a/site_second/index.html
+++ b/site_second/index.html
@@ -17,9 +17,9 @@
   <li class="nocufon active" data-slide="1"><a data-slide="1" href="#">Покупка и продажа самолетов</a></li>
   <li class="nocufon" data-slide="2"><a data-slide="2" href="#">Услуги в области авиации</a></li>
   <li class="nocufon" data-slide="3"><a data-slide="3" href="#">Консалтинг</a></li>
-  <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Логистика</a></li>
-  <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Сертификаты</a></li>
-  <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Клиенты</a></li>
+  <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Услуги в области авиации</a></li>
+  <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Услуги в области бронетехникиa</li>
+  <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Лодки и морские судна</a></li>
   <li class="nocufon" data-slide="7"><a data-slide="7" href="#">Контакты</a></li>
 </ul>
 <!-- LOGO -->
@@ -32,9 +32,9 @@
   <button class="cross">&#735;</button>
   <div class="menu">
   <ul class="navigationMenu navigationMenu_hamburger" >
-    <li class="nocufon active" data-slide="1"><a data-slide="1" href="">О компании</a></li>
-  <li class="nocufon" data-slide="2"><a data-slide="2" href="">Консалтинг</a></li>
-  <li class="nocufon" data-slide="3"><a data-slide="3" href="">Логистика</a></li>
+    <li class="nocufon active" data-slide="1"><a data-slide="1" href="">Покупка и продажа самолетов</a></li>
+  <li class="nocufon" data-slide="2"><a data-slide="2" href="">Услуги в области авиации</a></li>
+  <li class="nocufon" data-slide="3"><a data-slide="3" href="">Консалтинг</a></li>
   <li class="nocufon" data-slide="4"><a data-slide="4" href="">Услуги в области авиации</a></li>
   <li class="nocufon" data-slide="5"><a data-slide="5" href="">Услуги в области бронетехники</a></li>
   <li class="nocufon" data-slide="6"><a data-slide="6" href="">Лодки и морские судна</a></li>
@@ -152,7 +152,9 @@
           <input class="form_input" type="text" placeholder="Введите название вашей компании"></br>
           <textarea name="comment" class="form_input_message" placeholder="Введите ваше сообщение"></textarea>
           <input type="text" class="form_input_code" placeholder="Введите код"></br>
+          <div class="bnts clearfix">
           <input type="reset" class="reset" value="Сбросить"><input type="submit" class="submit_button" value="Отправить сообщение">
+          </div>
       </form>
       <div class="contact_img"><img src="img/USAF_A-10_Thunderbolt_II-901856.png"></div>
   </div>
