--- a/site_second _some/index.html
+++ b/site_second _some/index.html
@@ -17,10 +17,11 @@
   <li class="nocufon active" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
   <li class="nocufon" data-slide="2"><a data-slide="2" href="#">Консалтинг</a></li>
   <li class="nocufon" data-slide="3"><a data-slide="3" href="#">Логистика</a></li>
-  <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Услуги в области авиации</a></li>
-  <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Услуги в области бронетехники</a></li>
-  <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Лодки и морские судна</a></li>
-  <li class="nocufon" data-slide="7"><a data-slide="7" href="#">Контакты</a></li>
+  <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Авиация</a></li>
+  <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Бронетехника и вооружение</a></li>
+  <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Судостроение и морская техника</a></li>
+  <li class="nocufon" data-slide="7"><a data-slide="7" href="#">Продукция</a></li>
+  <li class="nocufon" data-slide="8"><a data-slide="8" href="#">Контакты</a></li>
 </ul>
 <!-- LOGO -->
 <div id="logo"><img class="main_logo" src="img/logo_335x76_Anatysis.png"></div>
@@ -32,13 +33,14 @@
   <button class="cross">&#735;</button>
   <div class="menu">
   <ul class="navigationMenu navigationMenu_hamburger" >
-    <li class="nocufon active" data-slide="1"><a data-slide="1" href="">О компании</a></li>
-  <li class="nocufon" data-slide="2"><a data-slide="2" href="">Консалтинг</a></li>
-  <li class="nocufon" data-slide="3"><a data-slide="3" href="">Логистика</a></li>
-  <li class="nocufon" data-slide="4"><a data-slide="4" href="">Услуги в области авиации</a></li>
-  <li class="nocufon" data-slide="5"><a data-slide="5" href="">Услуги в области бронетехники</a></li>
-  <li class="nocufon" data-slide="6"><a data-slide="6" href="">Лодки и морские судна</a></li>
-  <li class="nocufon" data-slide="7"><a data-slide="7" href="">Контакты</a></li>
+    <li class="nocufon active" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
+  <li class="nocufon" data-slide="2"><a data-slide="2" href="#">Консалтинг</a></li>
+  <li class="nocufon" data-slide="3"><a data-slide="3" href="#">Логистика</a></li>
+  <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Авиация</a></li>
+  <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Бронетехника и вооружение</a></li>
+  <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Судостроение и морская техника</a></li>
+  <li class="nocufon" data-slide="7"><a data-slide="7" href="#">Продукция</a></li>
+  <li class="nocufon" data-slide="8"><a data-slide="8" href="#">Контакты</a></li>
   </ul>
 </div> 
 
@@ -124,6 +126,139 @@
 
 <div class="slideContainer" data-slide="7">
 <div class="slideContainerHeadline" id="slide7">
+<h2 class="nocufon">Продукты</h2>
+</div>
+
+<div class="product_container clearfix"> 
+<a class="anchor_product" href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product" href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product"href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product" href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+<a class="anchor_product" href="#"><div class="product">
+  <div class="product_img"><img src="img/product.png"></div>
+  <div class="product_description_container">
+    <h5>Magna aliqua.</h5>
+    <div class="product_description">veniam, quis nostrud exercitation
+        ullamco laboris nisi ut aliquip ex
+        ea commodo consequat.</div>
+  </div>
+</div>
+</a>
+</div>
+</div>
+<div class="btn_container">
+    <div class="button_more_products">Показать больше</div>
+</div>
+<!-- SLIDE 8 -->
+
+<div class="slideContainer" data-slide="8">
+<div class="slideContainerHeadline" id="slide8">
 <h2 class="nocufon">Обращайтесь к нам с любым вопросом и мы Вам<br>
 с удовольствием ответим.</h2>
 </div>
