--- a/site_second _some/index.html
+++ b/site_second _some/index.html
@@ -128,7 +128,12 @@
 <div class="slideContainerHeadline" id="slide7">
 <h2 class="nocufon">Продукты</h2>
 </div>
-
+<div class="switch_container">
+  <a class="switch_link" href=""><div class="switch">Все товары</div></a>
+  <a class="switch_link" href=""><div class="switch">Бронетехника и вооружение</div></a>
+  <a class="switch_link" href=""><div class="switch">Авиация</div></a>
+  <a class="switch_link" href=""><div class="switch">Судостроение и морская техника</div></a>
+</div>
 <div class="product_container clearfix"> 
 <a class="anchor_product" href="#"><div class="product">
   <div class="product_img"><img src="img/product.png"></div>
@@ -253,7 +258,7 @@
 </div>
 </div>
 <div class="btn_container">
-    <div class="button_more_products">Показать больше</div>
+    <a class="button_more_products_link" href=""><div class="button_more_products">Показать больше</div></a>
 </div>
 <!-- SLIDE 8 -->
 
