--- a/anarisis_ver2/index.html
+++ b/anarisis_ver2/index.html
@@ -14,7 +14,7 @@
     
 <!-- NAVIGACE -->
 <ul class="navigationMenu navigationMenu_main">
-  <li class="nocufon" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
+  <li class="nocufon active" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
   <li class="nocufon" data-slide="2"><a data-slide="2" href="#">Консалтинг</a></li>
   <li class="nocufon" data-slide="3"><a data-slide="3" href="#">Логистика</a></li>
   <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Авиация</a></li>
@@ -126,7 +126,7 @@
 
 <div class="slideContainer" data-slide="7">
 <div class="slideContainerHeadline" id="slide7">
-<h2 class="nocufon">Продукты</h2>
+<h2 class="nocufon">Продукция</h2>
 </div>
 <div class="switch_container">
   <a class="switch_link" href=""><div class="switch">Все товары</div></a>
@@ -316,10 +316,11 @@
 </div>
 </a>
 </div>
-</div>
 <div class="btn_container">
     <div class="button_more_products">Показать больше</div>
 </div>
+</div>
+
 <!-- SLIDE 8 -->
 
 <div class="slideContainer" data-slide="8">
