--- a/anarisis_ver3/index.html
+++ b/anarisis_ver3/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <!-- saved from url=(0022)http://www.csea.cz/ru/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
   
-
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
   
 
     <link href="css/style.css" rel="stylesheet">
@@ -33,7 +35,7 @@
   <button class="cross">&#735;</button>
   <div class="menu">
   <ul class="navigationMenu navigationMenu_hamburger" >
-    <li class="nocufon" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
+    <li class="nocufon active" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
   <li class="nocufon" data-slide="2"><a data-slide="2" href="#">Консалтинг</a></li>
   <li class="nocufon" data-slide="3"><a data-slide="3" href="#">Логистика</a></li>
   <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Авиация</a></li>
@@ -130,9 +132,9 @@
 </div>
 <div class="switch_container">
   <a class="switch_link" href=""><div class="switch">Все</div></a>
-  <a class="switch_link" href=""><div class="switch"><img src="img/Tank.png" style="width: 20px; height: 20px"></div></a>
-  <a class="switch_link" href=""><div class="switch"><img src="img/airplane-57-xxl.png" style="width: 20px; height: 20px"></div></a>
-  <a class="switch_link" href=""><div class="switch"><img src="img/white-cargo-ship-256.png" style="width: 20px; height: 20px"></div></a>
+  <a class="switch_link" href=""><div class="switch" data-title="Бронетехника и вооружение"><img src="img/Tank.png" style="width: 20px; height: 20px"></div></a>
+  <a class="switch_link" href=""><div class="switch" data-title="Авиация"><img src="img/airplane-57-xxl.png" style="width: 20px; height: 20px"></div></a>
+  <a class="switch_link" href=""><div class="switch" data-title="Судостроение и морская техника"><img src="img/white-cargo-ship-256.png" style="width: 20px; height: 20px"></div></a>
 </div>
 <div class="product_container clearfix"> 
 <a class="anchor_product" href="#"><div class="product">
