--- a/anarisis_ver3/index.html
+++ b/anarisis_ver3/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <div class="cont clearfix"><p>На протяжении последних 17-ти лет при нашем участии реализовано сотрудничество в более, чем <a href="http://www.csea.cz/ru/#slide6">30-ти странах</a>. Предлагаем посреднические услуги по покупке и продаже как новой, так и подержанной авиатехники. Специализируемся главным образом на летательных аппаратах следующих типов: Ан-26,<br>>
-Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div>
+Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div></div>
 
 <div class="slideImage" id="slideTwoImage">&nbsp;</div>
 </div>
@@ -83,7 +83,7 @@
 </div>
 
 <div class="cont clearfix"><p>На протяжении последних 17-ти лет при нашем участии реализовано сотрудничество в более, чем <a href="http://www.csea.cz/ru/#slide6">30-ти странах</a>. Предлагаем посреднические услуги по покупке и продаже как новой, так и подержанной авиатехники. Специализируемся главным образом на летательных аппаратах следующих типов: Ан-26,<br>>
-Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div>
+Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div></div>
 
 <div class="slideImage" id="slideThreeImage">&nbsp;</div>
 </div>
@@ -96,7 +96,7 @@
 </div>
 
 <div class="cont clearfix"><p>На протяжении последних 17-ти лет при нашем участии реализовано сотрудничество в более, чем <a href="http://www.csea.cz/ru/#slide6">30-ти странах</a>. Предлагаем посреднические услуги по покупке и продаже как новой, так и подержанной авиатехники. Специализируемся главным образом на летательных аппаратах следующих типов: Ан-26,<br>>
-Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div>
+Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div></div>
 
 <div class="slideImage" id="slideFourImage">&nbsp;</div>
 </div>
@@ -108,7 +108,7 @@
 </div>
 
 <div class="cont clearfix"><p>На протяжении последних 17-ти лет при нашем участии реализовано сотрудничество в более, чем <a href="http://www.csea.cz/ru/#slide6">30-ти странах</a>. Предлагаем посреднические услуги по покупке и продаже как новой, так и подержанной авиатехники. Специализируемся главным образом на летательных аппаратах следующих типов: Ан-26,<br>>
-Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div>
+Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div></div>
 
 <div class="slideImage" id="slideFiveImage">&nbsp;</div>
 </div>
@@ -121,7 +121,7 @@
 </div>
 
 <div class="cont clearfix"><p>На протяжении последних 17-ти лет при нашем участии реализовано сотрудничество в более, чем 30-ти странах</a>. Предлагаем посреднические услуги по покупке и продаже как новой, так и подержанной авиатехники. Специализируемся главным образом на летательных аппаратах следующих типов: Ан-26,<br>>
-Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div>
+Ан-32, Ил-76, L-39, Ми-2, Ми-8, Ми-17, Ми-24, Ми-26, МиГ-29, Ту-154.</p><img class="small_img"src="img/plane_2_443x250_Anatysis.png"></div></div>
 <div class="slideImage" id="slideSixImage">&nbsp;</div>
 </div>
 <!-- SLIDE 7 -->
