--- a/anarisis_ver3/index.html
+++ b/anarisis_ver3/index.html
@@ -4,10 +4,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
-  
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
   
-
     <link href="css/style.css" rel="stylesheet">
     <script src="js/script.js"></script><style type="text/css"></style>
   </head>
@@ -22,8 +20,8 @@
   <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Авиация</a></li>
   <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Бронетехника и вооружение</a></li>
   <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Судостроение и морская техника</a></li>
-  <li class="nocufon" data-slide="7"><a data-slide="7" href="#">Продукция</a></li>
-  <li class="nocufon" data-slide="8"><a data-slide="8" href="#">Контакты</a></li>
+  <li class="nocufon" data-slide="7" id="seven"><a data-slide="7" href="#">Продукция</a></li>
+  <li class="nocufon" data-slide="8" id="eight"><a data-slide="8" href="#">Контакты</a></li>
 </ul>
 <!-- LOGO -->
 <div id="logo"><img class="main_logo" src="img/logo_335x76_Anatysis.png"></div>
@@ -32,7 +30,6 @@
 
 
 <button class="hamburger">&#9776;</button>
-  <button class="cross">&#735;</button>
   <div class="menu">
   <ul class="navigationMenu navigationMenu_hamburger" >
     <li class="nocufon active" data-slide="1"><a data-slide="1" href="#">О компании</a></li>
