--- a/anarisis_ver3/index.html
+++ b/anarisis_ver3/index.html
@@ -19,9 +19,9 @@
   <li class="nocufon" data-slide="3"><a data-slide="3" href="#">Логистика</a></li>
   <li class="nocufon" data-slide="4"><a data-slide="4" href="#">Авиация</a></li>
   <li class="nocufon" data-slide="5"><a data-slide="5" href="#">Бронетехника и вооружение</a></li>
-  <li class="nocufon" data-slide="6"><a data-slide="6" href="#">Судостроение и морская техника</a></li>
-  <li class="nocufon" data-slide="7" id="seven"><a data-slide="7" href="#">Продукция</a></li>
-  <li class="nocufon" data-slide="8" id="eight"><a data-slide="8" href="#">Контакты</a></li>
+  <li class="nocufon six" data-slide="6"><a data-slide="6" href="#">Судостроение и морская техника</a></li>
+  <li class="nocufon seven" data-slide="7"><a data-slide="7" href="#">Продукция</a></li>
+  <li class="nocufon eight" data-slide="8"><a data-slide="8" href="#">Контакты</a></li>
 </ul>
 <!-- LOGO -->
 <div id="logo"><img class="main_logo" src="img/logo_335x76_Anatysis.png"></div>
