--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -9,8 +9,10 @@
     <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/jquery.bxslider.css">
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-viewport-checker/1.8.7/jquery.viewportchecker.min.js"></script>
+    <script type="text/javascript" src="js/jquery.bxslider.js"></script>
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
@@ -62,10 +64,13 @@
 <div class="sub-carousel sub-carousel_container">
 		<div class="carousel_container">
 		<h3 class="main_content_head">Наши клиенты</h3>
-			<ul class="carousel_container_list clearfix">
-				<li class="carousel_container_item"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+			<ul class="slider1 carousel_container_list clearfix">
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
 			</ul>
 		</div>
 </div>
@@ -186,6 +191,51 @@
 			</div>
 		</div>
 	</div>
+	<div class="block_six">
+		<div class="wrapper clearfix block_six_container">
+			<div class="download_file">
+			<h3 class="block_six_head">Cкачка pdf файла</h3>
+				<ul>
+					<li class="download_file_item"><a href="#"><img src="img/file1.png"></a></li>
+					<li class="download_file_item"><a href="#"><img src="img/file2.png"></a></li>
+					<li class="download_file_item"><a href="#"><img src="img/file3.png"></a></li>
+				</ul>
+			</div>
+			<div class="video_container">
+				<h3 class="block_six_head">Название видео ролика</h3>
+				<div class="video"></div>
+			</div>
+			
+		</div>
+	</div>
+	<div class="line"></div>
+	<div class="block_seven">
+		<div class="wrapper clearfix block_seven_container">
+			<h3 class="main_content_head">Что Вы получаете?</h3>
+			<div class="block_seven_client">
+				<div class="block_seven_icon"></div>
+				<div class="block_seven_client_text">
+					<h3 class="block_seven_head">Клиент</h3>
+					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
+				</div>
+			</div>
+			<div class="block_seven_task">
+				<div class="block_seven_icon"></div>
+				<div class="block_seven_task_text">
+					<h3 class="block_seven_head">Задача</h3>
+					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
+				</div>
+			</div>
+			<div class="block_seven_solution">
+				<div class="block_seven_icon"></div>
+				<div class="block_seven_solution_text">
+					<h3 class="block_seven_head">Задача</h3>
+					<div class="block_seven_text">Бизнес-план — план, программа осуществления бизнес-операций, действий фирмы, содержащая сведения о фирме, товаре, его производстве, рынках сбыта, маркетинге, организации операций и их эффективности.</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="line"></div>
 	<div class="block_eight ">
 		<div class="wrapper block_eight_container">
 		<h3 class="main_content_head">Наши клиенты</h3>
