--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -66,11 +66,11 @@
 		<h3 class="main_content_head">Наши клиенты</h3>
 			<ul class="slider1 carousel_container_list clearfix">
 				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_purple.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_red.png"></a></li>
 				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
-				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_purple.png"></a></li>
+				<li class="carousel_container_item slide"><a class="carousel_container_link" href="#"><img src="img/Adidas_original_red.png"></a></li>
 			</ul>
 		</div>
 </div>
@@ -241,6 +241,16 @@
 		<h3 class="main_content_head">Наши клиенты</h3>
 			<ul class="card_container clearfix">
 				<li class="card_item"><a class="card_link" href=""><img src="img/card1.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
+				<li class="card_item clear"><a class="card_link" href=""><img src="img/card1.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
+				<li class="card_item clear"><a class="card_link" href=""><img src="img/card1.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
