--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -258,6 +258,22 @@
 			</ul>
 		</div>
 	</div>
+	<div class="block_nine">
+		<div class="wrapper">
+			<h3 class="reviews_head">Отзывы наших клиентов</h3>
+			<div class="client_icon"></div>
+			<div class="slider">
+  <!-- <a href="#" class="control_next">>></a>
+  <a href="#" class="control_prev"><</a> -->
+	  			<ul>
+				    <li><blockquote>Содержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
+				    <li><blockquote>Содержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
+				    <li><blockquote>Содержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
+				    <li><blockquote>Содержит слайдер с отзывами клиентов. Переключение слайдов автоматически каждые 5 секунд(время не утверждено заказчиком окончательно)</blockquote></li>
+	  			</ul>  
+			</div>
+		</div>
+	</div>
 </main>
 <footer>
 	<div class="wrapper footer_container clearfix">
