--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -39,12 +39,12 @@
 	<section id="slider" class="container">
 		<ul class="slider-wrapper animate slideInRight">
 		<li class="slide current-slide">
-			<img src="img/nature-banner-01.png" title="" alt="">
-			<div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<img src="img/banner.png" title="" alt="">
+			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		<li class="slide">
-			<img src="img/banner-slide2.jpg" title="" alt="">
-			<div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
+			<img src="img/banner_slide2.png" title="" alt="">
+			<div class="slide_text_container"></div><div class="slide_text animated slideInRight">Сокращение затрат и оптимизации процесса! 7 лет в обработке данных программ лояльностей! Собственная программа ввода и обработки данных!</div>
 		</li>
 		</ul>
 		
@@ -302,6 +302,7 @@
       </form>
 		</div>
 	</div>
+	<a href="#" class="scrollup">Scroll</a>
 </footer>
 
 
