--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <link rel="preload" href="css/preload.css"> 
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <!-- <link rel="stylesheet" type="text/css" href="css/normalize.css"> -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -16,6 +17,13 @@
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
+<div id="loader-wrapper">
+			<div id="loader"></div>
+
+			<div class="loader-section section-left"></div>
+            <div class="loader-section section-right"></div>
+
+		</div>
 <header>
 	<div class="wrapper clearfix">
 		<div class="logo">
