--- a/ukrainian_achive_company/index.html
+++ b/ukrainian_achive_company/index.html
@@ -17,13 +17,13 @@
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 <body>
-<div id="loader-wrapper">
+<!-- <div id="loader-wrapper">
 			<div id="loader"></div>
 
 			<div class="loader-section section-left"></div>
             <div class="loader-section section-right"></div>
 
-		</div>
+		</div> -->
 <header>
 	<div class="wrapper clearfix">
 		<div class="logo">
@@ -253,16 +253,13 @@
 				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card22.png"></a></li>
 				<li class="card_item clear"><a class="card_link" href=""><img src="img/card1.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
 				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
-				<li class="card_item clear"><a class="card_link" href=""><img src="img/card1.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card2.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card5.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card7.png"></a></li>
-				<li class="card_item"><a class="card_link" href=""><img src="img/card9.png"></a></li>
+				<li class="card_item"><a class="card_link" href=""><img src="img/card22.png"></a></li>
 			</ul>
 		</div>
 	</div>
